[tool.poetry]
name = "tidevice3"
version = "0.1.0"
description = "wrapper for pymobiledevice3 for easy use with iphone device"
homepage = "https://github.com/codeskyblue/tidevice3"
authors = ["codeskyblue <codeskyblue@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymobiledevice3 = "^2.36.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
t3 = "tidevice3.__main__:main"

# 根据tag来动态配置版本号,tag需要v开头，比如v0.0.1
[tool.poetry-dynamic-versioning]
enable = true

# 需要将原本的build-system替换掉
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
